# payrex

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  init-db.sql  requirements.txt
core-engine/: Cargo.toml  Dockerfile
core-engine/src/: main.rs
core-engine/src/api/: handlers.rs  mod.rs
core-engine/src/crypto/: mod.rs
core-engine/src/fraud/: mod.rs
core-engine/src/ledger/: mod.rs  transaction.rs
core-engine/src/models/: mod.rs
core-engine/src/security/: mod.rs
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/.next/: fallback-build-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/.next/cache/: .previewinfo  .rscinfo
frontend/.next/cache/eslint/: .cache_1iggg2w
frontend/.next/diagnostics/: route-bundle-stats.json
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.json  server-reference-manifest.js
frontend/.next/server/app/: _global-error.html  (+7 more)
frontend/.next/standalone/: server.js
frontend/.next/types/: routes.d.ts  validator.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CodeBlock.tsx  EndpointCard.tsx  Sidebar.tsx
gateway/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
gateway/src/: app.module.ts  health.controller.ts  main.ts
gateway/src/config/: configuration.ts
gateway/src/database/: database.module.ts  database.service.ts
(+408 files in other folders)
