[package]
name = "core-engine"
version = "1.0.0"
edition = "2021"
description = "High-performance payment core engine — ledger, crypto, fraud detection"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
config = "0.14"
actix-cors = "0.7"
